@@ -1,3 +1,9 @@
+2013-11-29 Riccardo Mottola <rm@gnu.org>
+
+	* Headers/ObjectiveC2/objc/runtime.h
+	* Headers/Foundation/NSObjCRuntime.h
+	Insert some kludge for PTR stuff on systems with fake C99 compatible headers.
+
 2013-11-26 Riccardo Mottola <rm@gnu.org>
 
 	* Headers/GNUstepBase/GSConfig.h.in
